src/internal/vm/snapshots/hebi__internal__vm__tests__class_derived_with_init.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  pass
class U(T):
  init(self):
    print("U.init")
_ := U()


# Result:
None

# Output:
U.init

