src/internal/vm/snapshots/hebi__internal__vm__tests__class_with_init.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 0
  init(self):
    self.v = 10
T().v


# Result:
Int(
    10,
)
