src/internal/vm/snapshots/hebi__internal__vm__tests__class_with_init_conditional_false.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = none
  init(self, v, set):
    if set:
      self.v = v
?T(10, false).v


# Result:
None
